--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.13.0",
     "next": "16.0.0",
     "react": "19.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "19.2.0",
     "react-router-dom": "^7.9.4",
     "react-simple-typewriter": "^5.0.1",
