--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@react-three/fiber": "^9.4.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1"
