--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.4.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.13",
     "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
